Testing Dev - Add spacing to bottom of Sponsor an Event container && Update - height: auto for Firefox and IE fix on store filters select box

--- a/web/themes/custom/hm-public-theme/static/sass/views/_store.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/views/_store.scss
@@ -57,7 +57,7 @@
     }
 
     .views-exposed-form.header-search #edit-type {
-      height: 100%;
+      height: auto;
     }
 
     .views-exposed-form.header-search #edit-actions {
